Added cross x86-x64 parsing; done code refactoring; added 32-bit dll w/ .pdb

--- a/PE_header/test/test.vcxproj
+++ b/PE_header/test/test.vcxproj
@@ -154,9 +154,11 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="pdata.h" />
+    <ClInclude Include="pe_header.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="my_dia2dump.cpp" />
+    <ClCompile Include="pe_header.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
